--- a/Kubernetese/configMaps/podconfigmap.yml
+++ b/Kubernetese/configMaps/podconfigmap.yml
@@ -5,7 +5,7 @@ metadata:
 spec: 
  containers:  
   - image: nginx
-    name: c1    
+    name: myc1    
     volumeMounts:
      - name: config-volume       
        mountPath: /etc/config
