--- a/Kubernetese/configMaps/podconfigmap.yml
+++ b/Kubernetese/configMaps/podconfigmap.yml
@@ -12,5 +12,5 @@ spec:
  volumes:  
   - name: config-volume
     configMap:     
-     name: dev-config1
+     name: dev-config
  restartPolicy: Never
